# weekly-digest

./: .gitignore  deployment_config.txt  deployment_script.sh  main.py  pyproject.toml  readme.md  requirements.txt
scripts/: deploy.sh  test_local.py
src/readwise_digest/: __init__.py  data_processor.py  github_client.py  main_function.py  markdown_generator.py  readwise_client.py
tests/: test_markdown_generator.py
